--- a/Echo/res/layout/activity_device_status.xml
+++ b/Echo/res/layout/activity_device_status.xml
@@ -1,9 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dev_reg"
+    android:id="@+id/dev_status"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.cs.washington.cse477.DeviceRegActivity"
+    tools:context="org.cs.washington.cse477.DeviceStatusActivity"
     tools:ignore="MergeRootFrame" >
     
 </FrameLayout>
