--- a/Echo/res/layout/activity_notification.xml
+++ b/Echo/res/layout/activity_notification.xml
@@ -1,10 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dev_setup"
+    android:id="@+id/notification"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.cs.washington.cse477.NotificationActivity"
     tools:ignore="MergeRootFrame" >
-    
+
+    <ListView
+        android:id="@+id/notification_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
     
 </FrameLayout>
