--- a/Echo/res/layout/activity_start.xml
+++ b/Echo/res/layout/activity_start.xml
@@ -1,30 +1,70 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dev_setup"
+    android:id="@+id/dev_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="org.cs.washington.cse477.StartActivity"
-    tools:ignore="MergeRootFrame" 
-    android:orientation="vertical" >
+    tools:ignore="MergeRootFrame" >
 
-    <Button
-        android:id="@+id/dev_setup_setup_b"
+    <TextView
+        android:id="@+id/dev_start_user_dlg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:text="@string/connect_b"
-        android:onClick="connect" />
+        android:layout_marginTop="60dp"
+        android:text="@string/dev_start_user_dlg" />
     
-    <ListView
-        android:id="@+id/listview_networks"
+    <EditText
+        android:id="@+id/dev_start_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dev_setup_setup_b"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/dev_start_user_dlg"
+        android:ems="10" 
+        android:inputType="text">
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/dev_start_pass_dlg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dev_start_user"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:text="@string/dev_start_pass_dlg" />
+    
+    <EditText
+        android:id="@+id/dev_start_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/dev_start_user"
+        android:layout_below="@+id/dev_start_pass_dlg"
+        android:ems="10"
+        android:inputType="textPassword" />
+    
+    <Button
+        android:id="@+id/dev_start_login_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dev_start_pass"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_alignLeft="@+id/dev_start_newacct_b"
+        android:layout_alignRight="@+id/dev_start_newacct_b"
+        android:onClick="login"
+        android:text="@string/dev_start_login_b" />
+
+    <Button
+        android:id="@+id/dev_start_newacct_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dev_start_login_b"
+        android:layout_centerHorizontal="true"
+        android:onClick="login"
+        android:text="@string/dev_start_newacct_b" />
 
 </RelativeLayout>
