--- a/Echo/res/layout/activity_settings.xml
+++ b/Echo/res/layout/activity_settings.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/settings"
     android:layout_width="match_parent"
@@ -6,4 +6,17 @@
     tools:context="org.cs.washington.cse477.SettingsActivity"
     tools:ignore="MergeRootFrame" >
     
-</FrameLayout>
+    <ListView
+        android:id="@+id/settings_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/settings_text_test" />
+    <TextView 
+        android:id="@+id/settings_text_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
+    
+</RelativeLayout>
