--- a/Echo/res/layout/activity_settings.xml
+++ b/Echo/res/layout/activity_settings.xml
@@ -10,7 +10,8 @@
         android:id="@+id/settings_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_text_test" />
+        android:layout_below="@+id/settings_text_test"
+        android:choiceMode="multipleChoice" />
     <TextView 
         android:id="@+id/settings_text_test"
         android:layout_width="wrap_content"
