--- a/Echo/res/layout/activity_settings.xml
+++ b/Echo/res/layout/activity_settings.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/settings_text_test"
-        android:choiceMode="multipleChoice" />
+        android:choiceMode="singleChoice" />
     <TextView 
         android:id="@+id/settings_text_test"
         android:layout_width="wrap_content"
