--- a/Echo/res/layout/settings_listview_item.xml
+++ b/Echo/res/layout/settings_listview_item.xml
@@ -14,7 +14,7 @@
         android:contentDescription="@string/settings_play_desc"
         android:src="@drawable/ic_action_play" />
 
-	<ToggleButton
+	<Switch
         android:id="@+id/settings_toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,8 +22,10 @@
         android:layout_margin="8dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
-        android:text="@string/settings_toggle" />
+         />
     
+	<!-- android:text="@string/settings_toggle" -->
+	
     <TextView
         android:id="@+id/settings_text"
         android:layout_width="fill_parent"
