add delete dialog, fix configure button double click UI issue

--- a/Echo/res/layout/activity_device_setup.xml
+++ b/Echo/res/layout/activity_device_setup.xml
@@ -28,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/dev_setup_networks_spinner"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:onClick="refreshScan"
         android:text="@string/dev_setup_refresh" />
     
@@ -38,6 +40,8 @@
         android:layout_below="@+id/dev_setup_password"
         android:layout_centerHorizontal="true"
         android:onClick="configureFlyport"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:text="@string/dev_setup_b" />
 
     <TextView
