--- a/Echo/res/layout/activity_device_setup.xml
+++ b/Echo/res/layout/activity_device_setup.xml
@@ -30,7 +30,7 @@
         android:layout_below="@+id/dev_setup_networks_spinner"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:onClick="refreshScan"
+        android:onClick="initWifiScan"
         android:text="@string/dev_setup_refresh" />
     
     <Button
