--- a/Echo/res/layout/activity_settings.xml
+++ b/Echo/res/layout/activity_settings.xml
@@ -10,14 +10,15 @@
         android:id="@+id/settings_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_text_test"
         android:choiceMode="singleChoice" />
-    <TextView 
-        android:id="@+id/settings_text_test"
+    
+        <Switch
+        android:id="@+id/loud_unknown_toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_margin="8dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        />
     
 </RelativeLayout>
