improve UI, refactor code, working on setup activity

--- a/Echo/res/layout/activity_device_setup.xml
+++ b/Echo/res/layout/activity_device_setup.xml
@@ -7,22 +7,84 @@
     tools:ignore="MergeRootFrame" >
 
     <Spinner
+        android:id="@+id/dev_setup_security_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dev_setup_security"
+        android:layout_centerHorizontal="true"
+        android:layout_alignLeft="@+id/dev_setup_networks_spinner"
+        android:layout_alignRight="@+id/dev_setup_networks_spinner"
+        android:layout_marginBottom="18dp" />
+    
+    <TextView
+        android:id="@+id/dev_setup_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="fill"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textStyle="italic"
+        android:text="@string/dev_setup_description" />
+    
+    <TextView
+        android:id="@+id/dev_setup_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/dev_setup_description"
+        android:layout_marginTop="20dp"
+        android:textSize="16sp"
+        android:text="@string/dev_setup_net_sel" />
+    
+    <Spinner
         android:id="@+id/dev_setup_networks_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignRight="@+id/dev_setup_select"
         android:layout_below="@+id/dev_setup_select"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="6dp" />
 
-    <Button 
+    <ImageView 
         android:id="@+id/dev_setup_refresh_networks_b"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/dev_setup_networks_spinner"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:layout_toRightOf="@+id/dev_setup_networks_spinner"
+        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@+id/dev_setup_networks_spinner"
+        android:layout_alignTop="@+id/dev_setup_networks_spinner"
+        android:scaleType="center"
         android:onClick="initWifiScan"
-        android:text="@string/dev_setup_refresh" />
+        android:contentDescription="@string/dev_setup_refresh_b_desc"
+        android:src="@drawable/ic_action_refresh_dark" />
+    
+    <TextView
+        android:id="@+id/dev_setup_security"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dev_setup_networks_spinner"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:textSize="16sp"
+        android:text="@string/dev_setup_encr_sel" />
+    
+    
+    
+    <TextView
+        android:id="@+id/dev_setup_password_prompt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/dev_setup_security_spinner"
+        android:textSize="16sp"
+        android:text="@string/dev_setup_sec_sel" />
+    
     
     <Button
         android:id="@+id/dev_setup_setup_b"
@@ -34,53 +96,27 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:text="@string/dev_setup_b" />
-<!--  -->
     
     <EditText
         android:id="@+id/dev_setup_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dev_setup_security_select"
+        android:layout_below="@+id/dev_setup_password_prompt"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="28dp"
-        android:ems="10"
         android:inputType="textPassword" >
     </EditText>
 
-    <Spinner
-        android:id="@+id/dev_setup_security_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dev_setup_security"
-        android:layout_centerHorizontal="true"
-        android:layout_alignLeft="@+id/dev_setup_networks_spinner"
-        android:layout_alignRight="@+id/dev_setup_networks_spinner"
-        android:layout_marginBottom="18dp" />
+    
 
-    <TextView
-        android:id="@+id/dev_setup_security"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dev_setup_refresh_networks_b"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/dev_setup_encr_sel" />
+    
 
-    <TextView
-        android:id="@+id/dev_setup_select"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/dev_setup_security"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="57dp"
-        android:text="@string/dev_setup_net_sel" />
+    
 
-    <TextView
-        android:id="@+id/dev_setup_security_select"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/dev_setup_security"
-        android:layout_below="@+id/dev_setup_security_spinner"
-        android:text="@string/dev_setup_sec_sel" />
+    
+
+    
+
+    
     
 </RelativeLayout>
