--- a/Echo/res/layout/notification_listview_item.xml
+++ b/Echo/res/layout/notification_listview_item.xml
@@ -7,13 +7,13 @@
         android:id="@+id/notification_play"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
+        android:src="@drawable/ic_action_play"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="6dip"
         android:contentDescription="@string/notification_play_desc"
          />
-<!-- android:src="@drawable/ic_action_play" -->
 
     <LinearLayout
         android:layout_width="fill_parent"
