--- a/Echo/res/layout/settings_listview_item.xml
+++ b/Echo/res/layout/settings_listview_item.xml
@@ -4,8 +4,6 @@
     android:padding="6dip" >	
 	
     
-	<!-- android:text="@string/settings_toggle" -->
-	
     <TextView
         android:id="@+id/settings_text"
         android:layout_width="fill_parent"
@@ -39,12 +37,11 @@
         android:src="@drawable/ic_action_remove" />
 
       <ImageView
-          android:id="@+id/settings_play"
-          android:layout_width="wrap_content"
-          android:layout_height="fill_parent"
-          android:layout_alignTop="@+id/settings_text"
-          android:layout_toLeftOf="@+id/settings_toggle"
-          android:contentDescription="@string/settings_play_desc"
-           />
-<!-- android:src="@drawable/ic_action_play" -->
+		android:id="@+id/settings_play"
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		android:src="@drawable/ic_action_play"
+		android:layout_alignTop="@+id/settings_text"
+		android:layout_toLeftOf="@+id/settings_toggle"
+		android:contentDescription="@string/settings_play_desc" />
 </RelativeLayout>
